# idle-termquest

./: Cargo.toml  README.md
src/: app.rs  context.rs  event.rs  lib.rs  main.rs  tui.rs  ui.rs  update.rs
src/backends/: crossterm.rs  mod.rs
src/core/: consts.rs  mod.rs
src/core/components/: command.rs  entity_list.rs  mod.rs  turn.rs
src/core/entities/: enemy.rs  hero.rs  mod.rs  types.rs
src/core/states/: mod.rs  welcome.rs
src/core/states/ingame/: mod.rs
src/core/types/: info.rs  mod.rs  stat.rs  status.rs
