[package]
name = "idle-termquest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "idle_termquest"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.79"
cfg-if = "1.0.0"
hecs = { version = "0.10.4", features = ["macros", "row-serialize", "column-serialize"] }
rand = "0.8.5"
serde = { version = "1.0.195", default-features = false, features = ["derive"] }
serde_json = "1.0.111"
typetag = "0.2.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
ratatui = { version = "0.25.0", default-features = false }
tokio = { version = "1.35.1", features = ["macros", "rt", "time"] }
getrandom = { version = "0.2.11", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ratatui = "0.25.0"
crossterm = { version = "0.27.0", features = ["event-stream"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "time"] }
tokio-util = "0.7.10"
futures = "0.3.28"

